--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "express-basic-app",
   "version": "0.0.1",
   "main": "server.js",
-  "description": "This is basic express app implementation for project easy start.",
+  "description":
+    "This is basic express app implementation for project easy start.",
   "repository": "https://github.com/Bizico/express-basic-app",
   "author": "Vadym Zhufiak",
   "license": "MIT",
@@ -23,7 +24,8 @@
   "scripts": {
     "start": "node build/server.js",
     "start:dev": "nodemon --exec babel-node -- ./src/www.js --inspect ",
-    "build:doc": "multi-file-swagger -o yaml public/swagger.yaml > public/doc.yaml",
+    "build:doc":
+      "multi-file-swagger -o yaml ./public/index.yaml > ./public/doc.yaml",
     "build": "webpack --config ./webpack.config.js",
     "test": "jest --no-cache",
     "test:watch": "jest --watch",
