--- a/public/components/requestBodies.yaml
+++ b/public/components/requestBodies.yaml
@@ -1,18 +1,4 @@
-Login:
-  description: A JSON object contaning email, password pair.
-  required: true
-  content:
-    application/json:
-      schema:
-        type: object
-        properties:
-          email:
-            type: string
-          password:
-            type: string
-        example:
-          email: admin@optimizer.com
-          password: lePassword123
+
 Email:
   description: A JSON object contaning email.
   required: true
@@ -23,85 +9,8 @@ Email:
         properties:
           email:
             type: string
-            example: missing@optimizer.com
-Signup:
-  description: Signup data.
-  required: true
-  content:
-    application/json:
-      schema:
-        type: object
-        properties:
-          email:
-            type: string
-          role:
-            type: string
-            enum:
-            - buyer_admin
-            - seller_admin
-          password:
-            type: string
-          passwordRepeat:
-            type: string
-          full_name:
-            type: string
-          company_name:
-            type: string
-        example:
-          email: admin@optimizer.com
-          password: lePassword123
-          passwordRepeat: lePassword123
-          role: buyer_admin
-          full_name: Taras Shevchenko
-          company_name: Kurrulo Mefodiivse Bratstvo
-Confirm:
-  description: Data for email confirmation and signup finalization.
-  required: true
-  content:
-    application/json:
-      schema:
-        type: object
-        properties:
-          code:
-            type: string
-          name:
-            type: string
-          contact_person_full_name:
-            type: string
-          contact_person_email:
-            type: string
-          contact_person_phone:
-            type: string
-          legal_address:
-            type: string
-          description:
-            type: string
-          website:
-            type: string
-          country:
-            type: sting
-          city:
-            type: string
-          street:
-            type: string
-          company_email:
-            type: string
-          image:
-            type: string
-        example:
-          code: SOME_HASH
-          name: Tomatoes inc.
-          contact_person_full_name: Vasya Pupkin
-          contact_person_email: opti@mailcom
-          contact_person_phone: "+123123123123"
-          description: " It's my company and i love it. Parapapapam"
-          legal_address: "Dniprovska naberejna 26a"
-          website: "https://opti.com"
-          country: USA
-          city: New Your
-          street: WallStreet 12
-          company_email: "company_name@lol.com"
-AdminRecover:
+            example: missing@sdsa.com
+Recover:
   description: Data requred for password reset.
   required: true
   content:
@@ -111,8 +20,8 @@ AdminRecover:
         properties:
           email:
             type: string
-            example: "admin@bizico.com"
-AdminRestore:
+            example: "@bizico.com"
+Restore:
   description: Data requred for password reset.
   required: true
   content:
@@ -129,7 +38,7 @@ AdminRestore:
           password_repeat:
             type: string
             example: "brand_new_password"
-AdminChangePassword:
+ChangePassword:
   description: Data requred for password change.
   required: true
   content:
@@ -146,8 +55,8 @@ AdminChangePassword:
           password_repeat:
             type: string
             example: "brand_new_password"
-AdminJoin:
-  description: Admin Join Data.
+Join:
+  description:  Join Data.
   required: true
   content:
     application/json:
@@ -163,8 +72,8 @@ AdminJoin:
           password_repeat:
             type: string
             example: SomeComplexPa$$word
-AdminLogin:
-  description: Admin Login Data.
+Login:
+  description:  Login Data.
   required: true
   content:
     application/json:
@@ -173,12 +82,12 @@ AdminLogin:
         properties:
           email:
             type: string
-            example: admin@bizico.com
+            example: sdds@bizico.com
           password:
             type: string
             example: SomeComplexPa$$word
-AdminInvite:
-  description: Invite Admin data.
+Invite:
+  description: Invite  data.
   required: true
   content:
     application/json:
@@ -187,4 +96,4 @@ AdminInvite:
         properties:
           email:
             type: string
-            example: admin@bizico.com
+            example: asa@bizico.com
