--- a/public/index.yaml
+++ b/public/index.yaml
@@ -152,8 +152,8 @@ servers:
   - url: http://localhost:3000
   - url: http://127.0.0.1:3000
 tags: 
-  - name: Name
-    description: Tag name.
+  - name: List
+    description: Shopping List.
 security:
   - bearerAuth: []
 paths:
