--- a/sample.env
+++ b/sample.env
@@ -3,10 +3,10 @@ PORT=3000
 NODE_ENV=development
 PUBLIC_ROOT=/public
 
-DB_HOST=127.0.0.1
+DB_HOST=postgres
 DB_USER=postgres
 DB_PASSWORD=1
 DB_NAME=base
-DB_PORT=5432
+DB_PORT=3001
 
 HOST_NAME=http://127.0.0.1:3000
